--- a/style.css
+++ b/style.css
@@ -9,3 +9,22 @@
 .menu-dropdown {
     transition: top 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
+
+.black-background {
+    background-color: black !important;
+}
+
+.image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 1.5); 
+}
+
+.image-overlay img {
+    width: 100%;
+    height: auto;
+    opacity: 0.7;
+}
