--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 #inter {
-    font-family: 'Inter' sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 .menu-dropdown {
@@ -28,3 +28,33 @@
     height: auto;
     opacity: 0.7;
 }
+
+.custom-scrollbar::-webkit-scrollbar{
+    display: none;
+}
+ 
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 0.25rem;
+}
+  
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.4);
+}
+  
+.custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #f5f5f5;
+}
+
+.scroll-container {
+    width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+}
+
+.scroll-container::-webkit-scrollbar {
+    display: none;
+}
+
